@@ -1,3 +1,8 @@
+2005-01-10  Panagiotis Issaris <panagiotis.issaris@mech.kuleuven.ac.be>
+
+	* testsuite: Provide normalized tabular format for printing
+	measurements.
+	
 2005-01-10  Philippe Gerum  <rpm@xenomai.org>
 
 	* nucleus/shadow.c (xnshadow_unregister_interface): Accept to
